<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    android:orientation="vertical"    
    android:paddingLeft="5dip">

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"    
    android:paddingLeft="5dip">

    

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:paddingTop="50dip"
        android:gravity="center"
        android:text="@string/about_developed"
        android:textSize="14dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dip"
        android:gravity="center"
        android:autoLink="all"
        android:text="@string/about_contact_link"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="center_horizontal"
        android:paddingTop="150dip"
        android:text="@string/about_note"
        android:textSize="10sp" />

</LinearLayout>

</ScrollView>