<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:padding="8dip"
	   	android:background="#000000">
	    <RelativeLayout
	        android:id="@+id/titleLayout" 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="10dip"
	    	android:layout_marginBottom="10dip"
	    	android:orientation="horizontal">
	    	<ImageView
	    	    android:id="@+id/logo" 
			    android:src="@drawable/logo"
			    android:layout_width="70dip"
			    android:layout_height="70dip"
			    android:layout_alignParentLeft="true"
	    		android:layout_centerVertical="true"
			    android:paddingLeft="9dp"
			    android:paddingRight="0dp"
			    android:paddingBottom="2dp"
			    android:paddingTop="2dp" />
	        <TextView
	       	    android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_marginLeft="20dip"
	    		android:layout_toRightOf="@id/logo"
	    		android:layout_centerVertical="true"
	    		android:textSize="25dip"
	    		android:textColor="#FFFFFF"
	    		android:text="@string/whereAreYouFrom"/>
	    </RelativeLayout>
	    <ImageView
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingTop="2dp"/>
	    <RelativeLayout
	        android:id="@+id/sonGalegoLayout" 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingTop="10dip"
	    	android:paddingBottom="10dip"
	   		android:clickable="true"
	   		android:background="@drawable/profile_selector">
	       	<ImageView
	       	    android:id="@+id/sonGalego"
	       	    android:layout_width="80dip"
	    		android:layout_height="80dip" 
	    		android:layout_marginLeft="0dip" 
	    		android:layout_marginRight="20dip"/>
	       	<TextView
	       	    android:id="@+id/sonGalegoText"
	       	    android:layout_width="fill_parent"
	    		android:layout_height="wrap_content" 
	    		android:layout_marginRight="10dip"
	    		android:layout_toRightOf="@id/sonGalego"
	    		android:layout_centerVertical="true"
	    		android:textSize="20dip"
	    		android:textColor="#DDDDDD"
	    		android:textStyle="bold"
	    		android:text="Son galego"/>
	    </RelativeLayout>
	    <ImageView
		    android:src="@android:drawable/divider_horizontal_bright"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="55dp"
		    android:paddingRight="55dp"/>
	    <RelativeLayout
	        android:id="@+id/sonDeForaLayout"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingTop="10dip"
	    	android:paddingBottom="10dip"
	    	android:clickable="true"
	   		android:background="@drawable/profile_selector">
	       	<ImageView
	       	    android:id="@+id/sonDeFora"
	       	    android:layout_width="80dip"
	    		android:layout_height="80dip" 
	    		android:layout_marginLeft="0dip" 
	    		android:layout_marginRight="20dip"/>
	       	<TextView
	       	    android:id="@+id/sonDeForaText"
	       	    android:layout_width="fill_parent"
	    		android:layout_height="wrap_content" 
	    		android:layout_marginRight="10dip"
	    		android:layout_toRightOf="@id/sonDeFora"
	    		android:layout_centerVertical="true"
	    		android:textSize="20dip"
	    		android:textColor="#DDDDDD"
	    		android:textStyle="bold"
	    		android:text="@string/fromAbroad"/>
	    </RelativeLayout>
	    <ImageView
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingBottom="12dp"/>
	    <RelativeLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
	       	<TextView
	       	    android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_centerVertical="true"
	    		android:textSize="12dip"
	    		android:textColor="#999999"
	    		android:textStyle="italic"
	    		android:text="@string/youCanAlwaysChange"/>
	    </RelativeLayout>
	</LinearLayout>
</ScrollView>